# sergen-x-agent

./: .gitignore  .rustfmt.toml  Cargo.toml  README.md
.github/workflows/: rust.yml
src/: main.rs  mod.rs
src/commands/: command.rs  games.rs  install.rs  mod.rs  start.rs
src/common/: config.rs  error.rs  http.rs  installer.rs  mod.rs
src/common/hash/: hex.rs  md5.rs  mod.rs  sha256.rs
src/common/kv/: pair.rs
src/common/sysinfo/: mod.rs  systeminfo.rs
src/dependencies/java/: main.rs  mod.rs
src/dependencies/java/adoptium/: main.rs
src/minecraft/: README.md  main.rs  mod.rs
src/minecraft/curseforge/: mod.rs
src/minecraft/forge/: versions.rs
src/minecraft/modrinth/: modrinth.rs
src/minecraft/mohist/: mod.rs  mohist.rs
src/minecraft/neoforged/: mod.rs  neoforged.rs
src/minecraft/paper/: main.rs
src/minecraft/purpur/: mod.rs  purpur.rs
src/minecraft/quilt/: mod.rs  quilt.rs
src/minecraft/sponge/: download.rs
src/minecraft/technic/: mod.rs  technic.rs
src/minecraft/vanilla/: mod.rs  vanilla.rs  versions.rs
