# https://doc.rust-lang.org/cargo/reference/manifest.html
[package]
name = "sergen_x_agent"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.4" , features = ["cargo"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"],  default-features = false }
tokio = { version = "1", features = ["full"] }
once_cell = "1.19.0"
# JSON Serialisation
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8.12"
# Checksum algorithms
# https://github.com/RustCrypto/hashes
sha2 = "0.10"
md-5 = "0.10.6"

[profile.release]
strip = true
lto = true